--- a/WebContent/crm/office_network_list_edit.html
+++ b/WebContent/crm/office_network_list_edit.html
@@ -12,6 +12,7 @@
 <script src="dist/js/headquarters/conversion_utils.js"></script>
 <script type="text/javascript">
 	var id = getUrlParamByKey("id");
+	var datas = [];
 	$(function(){
 		$("#id").val(id);
 		initcurruser();
@@ -197,6 +198,13 @@
  		},false);
  	}
 	 function initcurcity(){
+			doManager("DistCityCodeManager","queryAllDistCityList",null,
+			 		    function(data,textStatus,XmlHttpRequest){
+			 				if (data.result) {
+			 					var jsonData = $.fromJSON(data.data);
+			 					giveCityNo(datas,jsonData);
+			 				}
+			 });
 	 		doManager("userManager","getCurrentUserCity",null,
 	 		    function(data,textStatus,XmlHttpRequest){
 	 				if (data.result) {
@@ -209,6 +217,38 @@
 	 				}
 	 		});
 	 }
+	 function giveCityNo(datas,jsonData){
+			$(jsonData).each(function(index,element){
+				var object = new Object();
+				object.name = jsonData[index]['cityno'];
+				object.value = jsonData[index]['cityname'];
+				datas.push(object);
+          });
+		 
+	 }
+	 function findArray(array, feature, all) {
+		    var all = arguments[2] ? arguments[2] : true;
+		    for(var index in array){
+		        var cur = array[index];
+		        if(feature instanceof Object){
+		            var allRight = true;
+		            for(var key in feature){
+		                var value = feature[key];
+		                if(cur[key].indexOf(value)>-1) return index;
+		                if(all && cur[key] != value){
+		                    allRight = false;
+		                    break;
+		                }
+		            }
+		            if(allRight) return index;
+		        }else{
+		            if(cur == feature){
+		                return index;
+		            }
+		        }
+		    }
+		    return -1;
+		}
 	 var curr_user;
 	  function initcurruser(){
 		    
