修改目标值页面-添加,修改

--- a/WebContent/crm/office_network_list_edit.html
+++ b/WebContent/crm/office_network_list_edit.html
@@ -211,7 +211,8 @@
 	 					var jsonData = $.fromJSON(data.data);
 	 					var IndexSelected = "";
 	 					$(jsonData).each(function(index,element){
-	 						$("#citySelect").append('<option value="'+element.cityid+'">'+element.cityname+'</option>');
+	 						var index = findArray(datas, {value: element.cityname});
+	 						$("#citySelect").append('<option value="'+datas[index].name+'">'+element.cityname+'</option>');
 	                     });
 	 					 $("#citySelect")[0].selectedIndex = IndexSelected;
 	 				}
