--- a/WebContent/crm/index_city_net.html
+++ b/WebContent/crm/index_city_net.html
@@ -296,7 +296,7 @@
           </div>
         </div>
         <div class="box box-default" style="margin-top: 50px;">
-          <div class="box-header h1 text-light-blue"><strong>网路拓展趋势</strong></div>
+          <div class="box-header h1 text-light-blue"><strong>网络拓展趋势</strong></div>
           <div class="box-body">
             <div class="col-sm-6" id="main3" style="height: 400px;"></div>
             <div class="col-sm-6" id="main11" style="height: 400px;"></div>
