修改社员页面坐标轴显示不全问题

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -1853,6 +1853,12 @@ var showDeal = function (dataServer){
 		    legend: {
 		        data:['成交额']
 		    },
+		    grid: {
+			      left: '10%',
+			      right: '10%',
+			      bottom: '3%',
+			      containLabel: true
+			},
 		    toolbox: {
 		        show : false,
 		        feature : {
