修改安心合作社统计数据为前七天数据

--- a/WebContent/crm/member_analysis.html
+++ b/WebContent/crm/member_analysis.html
@@ -1856,7 +1856,6 @@ var showDeal = function (dataServer){
 		    grid: {
 			      left: '10%',
 			      right: '10%',
-			      bottom: '3%',
 			      containLabel: true
 			},
 		    toolbox: {
@@ -1931,6 +1930,11 @@ var showDeal = function (dataServer){
 		    legend: {
 		        data:['订单量']
 		    },
+		    grid: {
+			      left: '10%',
+			      right: '10%',
+			      containLabel: true
+			},
 		    toolbox: {
 		        show : false,
 		        feature : {
