--- a/WebContent/crm/index_headquarters.html
+++ b/WebContent/crm/index_headquarters.html
@@ -331,8 +331,8 @@
 			  <input type="hidden" id="tradesumofmonthCustmomerHid">
               <input type="hidden" id="tradesumoflastmonthCustmomerHid">
               <div class="col-sm-4 no-padding gaugetb3" id="tradesumofmonthCustmomer"></div>
-              <div class="col-sm-2 increase" id="sing_id"><i class="fa fa-long-arrow-up" id="sign_1"></i></div>
-              <div class="col-sm-5 no-padding text-center"><p class="increase" id="customer_month_ratio"></p>环比</div>
+              <!-- <div class="col-sm-2 increase" id="sing_id"><i class="fa fa-long-arrow-up" id="sign_1"></i></div>
+              <div class="col-sm-5 no-padding text-center"><p class="increase" id="customer_month_ratio"></p>环比</div> -->
             </div>
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
               <h4 class="gaugetb2">本月新增社员</h4>
@@ -344,8 +344,8 @@
 			  <input type="hidden" id="tradesumofmonthOrderHid">
               <input type="hidden" id="tradesumoflastmonthOrderHid">
               <div class="col-sm-4 no-padding gaugetb4" id="tradesumofmonthOrder"></div>
-              <div class="col-sm-2 increase" id="sing_id4"><i class="fa fa-long-arrow-up" id="sign_4"></i></div>
-              <div class="col-sm-5 no-padding text-center"><p class="increase" id="order_count_ratio"></p>环比</div>
+              <!-- <div class="col-sm-2 increase" id="sing_id4"><i class="fa fa-long-arrow-up" id="sign_4"></i></div>
+              <div class="col-sm-5 no-padding text-center"><p class="increase" id="order_count_ratio"></p>环比</div> -->
             </div>
             <div class="info_bottom_dl info_bottom_right pull-right col-sm-6 no-margin">
               <h4 class="gaugetb3">历史累计消费用户</h4>
