添加门店类型

--- a/WebContent/hr/add_store_reference.html
+++ b/WebContent/hr/add_store_reference.html
@@ -216,6 +216,7 @@ function initview(){
 						if(va=="合作店"){
 							$("#hezuo").hide();
 							$("#hezuo1").hide();
+							$("#typeid").show();
 							$("#storetype").empty();
 							$('#storetype').append('<option value="">请选择</option>');
 							$('#storetype').append('<option value="T">合作店</option>');
