--- a/WebContent/hr/online_synchuman_list.html
+++ b/WebContent/hr/online_synchuman_list.html
@@ -184,7 +184,7 @@
         <div class="panel-footer" style="text-align: right">
             <button class="btn btn-primary" onclick="searchList()">查询</button>
             <button class="btn btn-primary" onclick="doClean();">重置</button>
-            <button class="btn btn-primary" onclick="initOnlineHuman();">初始化</button>
+            <!-- <button class="btn btn-primary" onclick="initOnlineHuman();">初始化</button> -->
             <button class="btn btn-primary" onclick="syncdisp();">差量同步</button>
         </div>
     </div>
