--- a/WebContent/crm/index_city_net.html
+++ b/WebContent/crm/index_city_net.html
@@ -179,8 +179,8 @@
               <div class="col-sm-6" id="main2" style="height: 400px;"></div>   
               <div class="col-sm-6" id="mainstoreType" style="height: 400px;"></div>
               <div class="col-sm-6" id="mainCooperative" style="height: 400px;"></div>
-              	<input type="button" value="详情展示" class="btn btn-primary col-sm-2 pull-right" id="storenetshow" onclick="storenetshow();">
-              <table class="table table-striped table-bordered" style="display:none;" id="storenet">
+<!--               	<input type="button" value="详情展示" class="btn btn-primary col-sm-2 pull-right" id="storenetshow" onclick="storenetshow();">
+ -->              <table class="table table-striped table-bordered" style="display:none;" id="storenet">
                 <tr>
                   <th width="180"></th>
                   <th colspan="8">门店业态分类</th>
@@ -2400,7 +2400,7 @@ $(function(){
 
   });
   
-  function storenetshow(){
+  /* function storenetshow(){
 	  if($("#storenet").css('display') == 'none'){
 		  $("#storenetshow").val("详情隐藏"); 
 		  $("#storenet").show();
@@ -2408,7 +2408,7 @@ $(function(){
 		  $("#storenetshow").val("详情展示");
 		  $("#storenet").hide();
 	  }
-  }
+  } */
   
   function penstoreshow(){
 	  if($("#showview_1").css('display') == 'none'){
