--- a/WebContent/crm/index_city_net.html
+++ b/WebContent/crm/index_city_net.html
@@ -269,8 +269,8 @@
             <div class="col-sm-12" id="main6" style="height: 350px;"></div>
             <div class="col-sm-12" id="maincard" style="height: 350px;"></div>
             <div class="col-sm-12">
-              <h4 style="margin-top: 0">门店分析</h4>
-              <p>全国已签约门店<span id="signedCount">?</span>家，处于筹备中的<b class="text-red" id="preStoreCount">?</b>家，已开业<b class="text-red" id="openCount">?</b>家，双证齐全数量占比<b class="text-red" id="doubleCardCount">?</b>%，仅有营业执照的<b class="text-red" id="businessCardCount">？</b>%，无证照<b class="text-red" id="noCardCount">?</b>%</p>
+             <!--  <h4 style="margin-top: 0">门店分析</h4>
+              <p>全国已签约门店<span id="signedCount">?</span>家，处于筹备中的<b class="text-red" id="preStoreCount">?</b>家，已开业<b class="text-red" id="openCount">?</b>家，双证齐全数量占比<b class="text-red" id="doubleCardCount">?</b>%，仅有营业执照的<b class="text-red" id="businessCardCount">？</b>%，无证照<b class="text-red" id="noCardCount">?</b>%</p> -->
               <table class="table table-striped table-bordered" id="storecard">
                 <tr>
                   <th width="50">城市</th>
@@ -1059,7 +1059,7 @@
           </div>
         </div>
         <div class="box box-default" style="margin-top: 50px;">
-          <div class="box-header h1 text-light-blue"><strong>混片儿情况——资源统计</strong><a class="pull-right btn btn-default btn-sm pfresource">编辑</a></div>
+          <div class="box-header h1 text-light-blue"><strong>混片儿情况——资源统计</strong><a id="resources_edit" style="display:none" class="pull-right btn btn-default btn-sm pfresource">编辑</a></div>
           <div class="box-body">
             <div class="col-sm-12">
             <h4><strong>店内资源统计表</strong></h4>
